--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,6 +49,8 @@
 
 .container {
     /* padding: 0 146px; */
+    display: flex;
+    flex-direction: column;
 }
 
 .main {
